# enterprise-repository

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-train.txt  requirements.txt
.github/workflows/: preferred-topics-tests.yml
alembic/: env.py
core/: custom_types.py  huggingface_client.py  settings.py
core/__pycache__/: settings.cpython-313.pyc.1919651097904
data/: README.md  rag_agent.rag_qa.json
data/02_industry_research/: industry_report_1.md  industry_report_10.md  industry_report_11.md  industry_report_12.md  industry_report_13.md  industry_report_14.md  industry_report_15.md  industry_report_16.md  industry_report_17.md  industry_report_18.md  industry_report_19.md  industry_report_2.md  industry_report_20.md  industry_report_21.md  industry_report_22.md  industry_report_23.md  industry_report_24.md  industry_report_25.md  industry_report_26.md  industry_report_27.md  industry_report_28.md  industry_report_29.md  industry_report_3.md  industry_report_30.md  industry_report_31.md  industry_report_32.md  industry_report_33.md  industry_report_34.md  industry_report_35.md  industry_report_36.md  industry_report_37.md  industry_report_38.md  industry_report_39.md  industry_report_4.md  industry_report_40.md  industry_report_41.md  industry_report_42.md  industry_report_43.md  industry_report_44.md  industry_report_45.md  (+20 more)
data/03_investment_memo/: investment_memo_1.docx  investment_memo_10.docx  investment_memo_11.docx  investment_memo_12.docx  investment_memo_13.docx  investment_memo_14.docx  investment_memo_15.docx  investment_memo_16.docx  investment_memo_17.docx  investment_memo_18.docx  investment_memo_19.docx  investment_memo_2.docx  investment_memo_20.docx  investment_memo_21.docx  investment_memo_22.docx  investment_memo_23.docx  investment_memo_24.docx  investment_memo_25.docx  investment_memo_26.docx  investment_memo_27.docx  investment_memo_28.docx  investment_memo_29.docx  investment_memo_3.docx  investment_memo_30.docx  investment_memo_31.docx  investment_memo_32.docx  investment_memo_33.docx  investment_memo_34.docx  investment_memo_35.docx  investment_memo_36.docx  investment_memo_37.docx  investment_memo_38.docx  investment_memo_39.docx  investment_memo_4.docx  investment_memo_40.docx  investment_memo_5.docx  investment_memo_6.docx  investment_memo_7.docx  investment_memo_8.docx  investment_memo_9.docx
data/07_portfolio_data/: portfolio_data_1.xlsx  portfolio_data_10.xlsx  portfolio_data_11.xlsx  portfolio_data_12.xlsx  portfolio_data_13.xlsx  portfolio_data_14.xlsx  portfolio_data_15.xlsx  portfolio_data_16.xlsx  portfolio_data_17.xlsx  portfolio_data_18.xlsx  portfolio_data_19.xlsx  portfolio_data_2.xlsx  portfolio_data_20.xlsx  portfolio_data_3.xlsx  portfolio_data_4.xlsx  portfolio_data_5.xlsx  portfolio_data_6.xlsx  portfolio_data_7.xlsx  portfolio_data_8.xlsx  portfolio_data_9.xlsx
data/08_market_data/: market_data_1.json  market_data_10.json  market_data_11.json  market_data_12.json  market_data_13.json  market_data_14.json  market_data_15.json  market_data_16.json  market_data_17.json  market_data_18.json  market_data_19.json  market_data_2.json  market_data_20.json  market_data_3.json  market_data_4.json  market_data_5.json  market_data_6.json  market_data_7.json  market_data_8.json  market_data_9.json
data/benchmarks/: benchmark_full.json  (+13 more)
db/: dump-rag_agent-202603131556.sql  mysql.sql
deploy/: README.zh-CN.md
docker/: backend-entrypoint.sh
font_service/: index.html  package-lock.json  package.json
ocr_service/: README.md  app.py  pyproject.toml
rag/: rag_service.py
scripts/: README.md  agent_eval.py  export_db_exports.py  export_financial_fact_lora.py  generate_qa_dataset.py  import_db_exports.py  init_project.py  prepare_financial_fact_lora_from_data.py  prepare_financial_fact_lora_from_hf.py  run_benchmark.py  train_financial_fact_extractor.py
service/: bootstrap_admin.py  database_initializer.py  server.py
tests/: test.py  test_agent_planner.py  test_api_smoke.py  test_benchmark_evaluation.py  test_context_builder.py  test_database_initializer.py  test_file_utils.py  test_financial_graph.py  test_generate_qa_dataset_script.py  test_long_term_memory.py  test_memory_answer_policy.py  test_ocr_integration.py  test_qa_generation.py  test_user_profile_sync.py
utils/: logger_handler.py  utils.py
web_service/: Dockerfile  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js
(+222 files in other folders)
