[project]
name = "agentic-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.96.0",
    "anyio==4.13.0",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "banks==2.4.1",
    "bcrypt==5.0.0",
    "cachetools==7.0.6",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "dataclasses-json==0.6.7",
    "datasets==4.8.4",
    "deprecated==1.3.1",
    "dill==0.4.1",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.18.0",
    "ecdsa==0.19.2",
    "elastic-transport==9.2.1",
    "elasticsearch==9.3.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.135.1",
    "filelock==3.29.0",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "greenlet==3.4.0",
    "greennode==0.0.3",
    "griffe==2.0.2",
    "griffecli==2.0.2",
    "griffelib==2.0.2",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.11.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jieba==0.42.1",
    "jinja2==3.1.6",
    "jiter==0.14.0",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-core==1.3.0",
    "langchain-deepseek==1.0.1",
    "langchain-greennode==0.0.1",
    "langchain-openai==1.1.15",
    "langgraph==1.1.8",
    "langgraph-checkpoint==4.0.2",
    "langgraph-prebuilt==1.0.10",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.33",
    "llama-index-core==0.14.21",
    "llama-index-embeddings-huggingface==0.7.0",
    "llama-index-instrumentation==0.5.0",
    "llama-index-llms-openai==0.7.5",
    "llama-index-vector-stores-postgres==0.8.1",
    "llama-index-workflows==2.19.0",
    "lxml==6.1.0",
    "mako==1.3.11",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "openai==2.32.0",
    "opencv-python-headless==4.13.0.92",
    "openpyxl==3.1.5",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "packaging==26.1",
    "pandas==3.0.2",
    "pgvector==0.4.2",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "protobuf==3.20.2",
    "psycopg2-binary==2.9.12",
    "pyarrow==23.0.1",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "pyjwt==2.8.0",
    "pymilvus==2.5.18",
    "pymongo==4.17.0",
    "pymupdf==1.27.2.2",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "python-pptx==1.0.2",
    "pyyaml==6.0.3",
    "rank-bm25==0.2.2",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentence-transformers==5.4.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tinytag==2.2.1",
    "tokenizers==0.22.2",
    "torch==2.11.0",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "ujson==5.12.0",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.42.0",
    "wrapt==2.1.2",
    "xlsxwriter==3.2.9",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zhipuai==2.1.5.20250825",
    "zstandard==0.25.0",
]

[dependency-groups]
train = [
    "peft>=0.13.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
